--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -1,3 +1,22 @@
-.someClass {
-
+.affair {
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
 }
+
+.button {
+    margin: 10px;
+    width: 60px;
+    background-color: lightgreen;
+    font-weight: bold;
+}
+
+.button:focus {
+    background-color: peru;
+    font-weight: bold;
+}
+.active {
+    background-color: peru;
+    font-weight: bold;
+}
+
