--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -1,7 +1,12 @@
 .someClass {
-
+    display: flex;
 }
 
 .error {
     border: 1px solid red;
+}
+
+.inputContainer {
+    display: flex;
+    flex-direction: column;
 }
