--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -1,5 +1,8 @@
 .someClass {
+    width: 400px;
     display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
 }
 
 .error {
@@ -9,4 +12,15 @@
 .inputContainer {
     display: flex;
     flex-direction: column;
+}
+
+.buttonContainer{
+
+}
+.button {
+    width: 60px;
+    background-color: lightgreen;
+    font-weight: bold;
+    margin-right: 20px;
+    border-radius: 5px;
 }
