--- a/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
+++ b/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
@@ -1,5 +1,25 @@
-.checkbox {
+.label {
+    display: flex;
+    align-items: center;
 
+    cursor: pointer;
+}
+
+.checkbox {
+    appearance: none;
+
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    background: #7a451b;
+}
+
+.checkbox:checked {
+    appearance: none;
+    background: #7a6c6e;
+}
+.checkbox:focus {
+    outline: 1px solid #7a1924
 }
 
 .spanClassName {
